--- a/package.json
+++ b/package.json
@@ -4,29 +4,47 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node server",
     "start-dev": "cross-env NODE_ENV=production node server.js",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.3.0",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "async-lock": "^1.2.8",
+    "auth0-js": "^9.15.0",
     "axios": "^0.21.1",
+    "babel-plugin-transform-define": "^2.0.0",
     "bootstrap": "^4.6.0",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "fontfaceobserver": "^2.1.0",
+    "formik": "^2.2.6",
+    "immutable": "*",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.2",
     "moment": "^2.29.1",
+    "mongoose": "^5.12.4",
     "next": "10.1.3",
     "next-routes": "^1.4.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "react": "17.0.2",
     "react-datepicker": "^3.7.0",
     "react-dom": "17.0.2",
+    "react-emotion": "^10.0.0",
     "react-hook-form": "^7.1.1",
     "react-resize-detector": "^6.6.5",
     "react-toastify": "^7.0.3",
     "react-typed": "^1.2.0",
     "reactstrap": "^8.9.0",
     "sass": "^1.32.10",
+    "slate": "^0.22.10",
+    "slate-html-serializer": "^0.8.13",
+    "slate-react": "^0.22.10",
     "slate-simple-editor": "git+https://github.com/Jerga99/slate-simple-editor.git",
+    "slugify": "^1.5.0",
     "swr": "^0.5.5"
   }
 }
