--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"@auth0/nextjs-auth0": "^1.3.0",
 		"@zeit/next-css": "^1.0.1",
 		"@zeit/next-sass": "^1.0.1",
 		"async-lock": "^1.2.8",
@@ -18,11 +17,13 @@
 		"babel-plugin-transform-define": "^2.0.0",
 		"bootstrap": "^4.6.0",
 		"cross-env": "^7.0.3",
+		"dotenv-webpack": "^7.0.2",
 		"express": "^4.17.1",
 		"express-jwt": "^6.0.0",
 		"fontfaceobserver": "^2.1.0",
 		"formik": "^2.2.6",
 		"immutable": "*",
+		"js-cookie": "^2.2.1",
 		"jsonwebtoken": "^8.5.1",
 		"jwks-rsa": "^2.0.2",
 		"moment": "^2.29.1",
@@ -41,7 +42,7 @@
 		"reactstrap": "^8.9.0",
 		"sass": "^1.32.10",
 		"slate": "^0.22.10",
-		"slate-html-serializer": "^0.8.13",
+		"slate-html-serializer": "^0.8.13", 
 		"slate-react": "^0.22.10",
 		"slate-simple-editor": "git+https://github.com/Jerga99/slate-simple-editor.git",
 		"slugify": "^1.5.0",
