--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"axios": "^0.21.1",
 		"babel-plugin-transform-define": "^2.0.0",
 		"bootstrap": "^4.6.0",
+		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
 		"dotenv-webpack": "^7.0.2",
 		"express": "^4.17.1",
@@ -42,7 +43,7 @@
 		"reactstrap": "^8.9.0",
 		"sass": "^1.32.10",
 		"slate": "^0.22.10",
-		"slate-html-serializer": "^0.8.13", 
+		"slate-html-serializer": "^0.8.13",
 		"slate-react": "^0.22.10",
 		"slate-simple-editor": "git+https://github.com/Jerga99/slate-simple-editor.git",
 		"slugify": "^1.5.0",
