--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "node ./server/index.js",
+		"dev": "node server/index.js",
 		"build": "next build",
-		"start-dev": "cross-env NODE_ENV=production node server.js",
+		"start-dev": "cross-env NODE_ENV=production node server/index.js",
 		"start": "next start"
 	},
 	"dependencies": {
@@ -26,7 +26,7 @@
 		"immutable": "*",
 		"js-cookie": "^2.2.1",
 		"jsonwebtoken": "^8.5.1",
-		"jwks-rsa": "^2.0.2",
+		"jwks-rsa": "^2.0.3",
 		"moment": "^2.29.1",
 		"mongoose": "^5.12.4",
 		"next": "10.1.3",
