--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "npx kill-port 3000 && nodemon server/index.js",
+		"dev": "npx kill-port 3000 && node server/index.js",
 		"build": "next build",
 		"start-dev": "cross-env NODE_ENV=production node server/index.js",
 		"start": "next start"
@@ -18,6 +18,7 @@
 		"bootstrap": "^4.6.0",
 		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
+		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^7.0.2",
 		"express": "^4.17.1",
 		"express-jwt": "^6.0.0",
